modify news and audit
